# yadisk-duplicate

./: CMakeLists.txt  CPackConfig.cmake  README.md
include/yadisk/ops/: yadisk-clean.hpp  yadisk-duplicate.hpp
sources/: yadisk-clean.cpp
