cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(duplicate)

set(DUPLICATE_MAJOR 0)
set(DUPLICATE_VERSION_MINOR 1)
set(DUPLICATE_VERSION_PATCH 1)
set(DUPLICATE_VERSION ${DUPLICATE_VERSION_MAJOR}.${DUPLICATE_VERSION_MINOR}.${DUPLICATE_VERSION_PATCH})
set(DUPLICATE_VERSION_STRING "v${DUPLICATE_VERSION}")
SET(PROJECT_NAME "duplicate") 

option(BUILD_TESTS "Build tests" ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB ${PROJECT_NAME}_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/sources/*) 
