cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(clean)

set(CLEAN_DUPLICATE_MAJOR 0)
set(CLEAN_DUPLICATE_VERSION_MINOR 1)
set(CLEAN_DUPLICATE_VERSION_PATCH 1)
set(CLEAN_DUPLICATE_VERSION ${CLEAN_DUPLICATE_VERSION_MAJOR}.${CLEAN_DUPLICATE_VERSION_MINOR}.${CLEAN_DUPLICATE_VERSION_PATCH})
set(CLEAN_DUPLICATE_VERSION_STRING "v${CLEAN_DUPLICATE_VERSION}")
SET(PROJECT_NAME "clean") 

option(BUILD_TESTS "Build tests" ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

file(GLOB ${PROJECT_NAME}_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/sources/*) 
